cc fixes